# cpu-profiler

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  profiler  profiler.bpf.c  profiler.cpp  profiler.h
.output/: profiler.skel.h
bpf/: lock.bpf.c  lock.h  perf.bpf.c  perf.h
data/: descriptions.json
sim/: main.cpp
src/: aggregator.cpp  aggregator.h  buffer.h  collector.cpp  collector.h  heartbeat_data.h  main.cpp  output.cpp  output.h  resolved_event.h  symbols.cpp  symbols.h
src/aggregators/: aggregator.h  call_stack.cpp  call_stack.h  kernel_dictionary.cpp  kernel_dictionary.h  lock_contention.cpp  lock_contention.h  thread_activity.cpp  thread_activity.h
src/collectors/: lock_collector.cpp  lock_collector.h  perf_collector.cpp  perf_collector.h
tools/: collect_symbols.cpp  debug_resolve.cpp
